--- a/.travis.yml
+++ b/.travis.yml
@@ -15,31 +15,9 @@ cache:
 matrix:
   fast_finish: true
   include:
-    - os: linux
-      env: TARGET_OS=xenial-gtk2
-    - os: linux
-      env: TARGET_OS=xenial-gtk3
-    - os: linux
-      env: TARGET_OS=mingw-w64
-    - os: linux
-      env: TARGET_OS=debian-sid
-    - os: linux
-      compiler: clang
-      env: TARGET_OS=debian-sid
-    # Both in allow_failures
     - os: windows
       cache: false
       env: TARGET_OS=pc DIRECT_SHOW="--with-directshow"
-    - os: windows
-      cache: false
-      env: TARGET_OS=pc DIRECT_SHOW=""
-  allow_failures:
-    - os: windows
-      cache: false
-      env: TARGET_OS=pc DIRECT_SHOW="--with-directshow"
-    - os: windows
-      cache: false
-      env: TARGET_OS=pc DIRECT_SHOW=""
 before_install:
   - "${TRAVIS_BUILD_DIR}/travis/${TRAVIS_OS_NAME}.${TARGET_OS}.before_install"
 install:
@@ -47,4 +25,5 @@ install:
 script:
   - "${TRAVIS_BUILD_DIR}/travis/${TRAVIS_OS_NAME}.${TARGET_OS}.script"
 after_script:
-  - if [ "$TRAVIS_OS_NAME" != "linux" ]; then travis_terminate ${TRAVIS_TEST_RESULT}; else ccache -s; fi
+  - ps aux
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ccache -s; fi
